Updating .env.dist

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,9 @@
-host=localhost,
-port=3306,
-DB_NAME=tooltime_backend,
-DB_USER=root,
-DB_PASSWORD=gobbleygook,
+host=localhost
+port=3306
+DB_NAME=tooltime
+DB_USER=root
+DB_PASSWORD=password
+AUTH_TOKEN_SECRET=123456
+AUTH_TOKEN_LIFE=86400
+REFRESH_TOKEN_SECRET=123456
+REFRESH_TOKEN_LIFE=86400
