--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "logger": "0.0.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
