--- a/.env.dist
+++ b/.env.dist
@@ -7,3 +7,7 @@ AUTH_TOKEN_SECRET=123456
 AUTH_TOKEN_LIFE=86400
 REFRESH_TOKEN_SECRET=123456
 REFRESH_TOKEN_LIFE=86400
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
+DOMAIN=example_url
