add email verification

--- a/.env.dist
+++ b/.env.dist
@@ -21,3 +21,8 @@ DOMAIN=http://localhost:8081
 
 # Environment
 STATIC_DIR=client
+
+# Email Verification
+SECRET_CODE=tooltime-secret-key
+GMAIL_ADDR=mediumtutorial2021@gmail.com
+GMAIL_PASS=medium2021t
