--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.3",
     "sequelize": "^6.6.5",
     "serverless-http": "^2.6.0",
     "stripe": "^8.126.0",
