update environment config

--- a/.env.dist
+++ b/.env.dist
@@ -17,7 +17,7 @@ STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=whsec_123...
 
 # Stripe subscription data
-DOMAIN=http://localhost:8081
+CLIENT_APP_URL=http://localhost:8080
 
 # Environment
 STATIC_DIR=client
