add admin verification function

--- a/.env.dist
+++ b/.env.dist
@@ -17,12 +17,13 @@ STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=whsec_123...
 
 # Stripe subscription data
-CLIENT_APP_URL=http://localhost:8080
+CLIENT_APP_URL=http://localhost:8081
+ADMIN_APP_URL=http://localhost:8080
 
 # Environment
 STATIC_DIR=client
 
 # Email Verification
 SECRET_CODE=tooltime-secret-key
-GMAIL_ADDR=mediumtutorial2021@gmail.com
-GMAIL_PASS=medium2021t
+GMAIL_ADDR=
+GMAIL_PASS=
